iglooportal.bak/iptables.rules
# Generated by iptables-save v1.4.14 on Fri Feb 21 14:13:17 2014
*nat
:PREROUTING ACCEPT [820:128120]
:INPUT ACCEPT [308:34929]
:OUTPUT ACCEPT [20:1433]
:POSTROUTING ACCEPT [153:12694]
-A PREROUTING -m mac --mac-source F0:4D:A2:7F:66:77 -j RETURN
-A PREROUTING -p tcp -m mark --mark 0x63 -m tcp --dport 80 -j DNAT --to-destination 192.168.200.23:80
-A PREROUTING -p tcp -m mark --mark 0x63 -m tcp --dport 443 -j DNAT --to-destination 192.168.200.23:443
-A PREROUTING -p udp -m mark --mark 0x63 -m udp --dport 53 -j DNAT --to-destination 192.168.200.23:53
COMMIT
# Completed on Fri Feb 21 14:13:17 2014
# Generated by iptables-save v1.4.14 on Fri Feb 21 14:13:17 2014
*filter
:INPUT ACCEPT [1931:175950]
:FORWARD ACCEPT [759:62162]
:OUTPUT ACCEPT [1065:137250]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -m mac --mac-source F0:4D:A2:7F:66:77 -j RETURN
-A FORWARD -i eth1 -m mark --mark 0x64 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -p udp -m udp --dport 67 -j ACCEPT
-A FORWARD -p udp -m udp --dport 68 -j ACCEPT
-A FORWARD -m mark --mark 0x63 -j DROP
COMMIT
# Completed on Fri Feb 21 14:13:17 2014
# Generated by iptables-save v1.4.14 on Fri Feb 21 14:13:17 2014
*mangle
:PREROUTING ACCEPT [5098:538525]
:INPUT ACCEPT [2463:229151]
:FORWARD ACCEPT [2917:285387]
:OUTPUT ACCEPT [1333:165912]
:POSTROUTING ACCEPT [2343:252161]
:internet - [0:0]
-A PREROUTING -i eth1 -j internet
-A PREROUTING -j internet
-A internet -m mac --mac-source F0:4D:A2:7F:66:77 -j RETURN
-A internet -m mac --mac-source F0:4D:A2:7F:66:77 -j RETURN
-A internet -j MARK --set-xmark 0x63/0xffffffff
-A internet -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x63/0xffffffff
-A internet -p tcp -m tcp --dport 443 -j MARK --set-xmark 0x63/0xffffffff
-A internet -m mark ! --mark 0x63 -j MARK --set-xmark 0x64/0xffffffff
COMMIT
# Completed on Fri Feb 21 14:13:17 2014
# Generated by iptables-save v1.4.14 on Fri Feb 21 14:13:17 2014
*raw
:PREROUTING ACCEPT [6942:739026]
:OUTPUT ACCEPT [1543:192439]
COMMIT
# Completed on Fri Feb 21 14:13:17 2014
